addons/kustomize/oss/kyverno/base/deny-external-secrets/.kyverno-test/resources.yaml
apiVersion: v1
kind: ExternalSecret
metadata:
  name: good
  namespace: my-namespace
spec:
  dataFrom:
    - secretStoreRef:
        name: secrets-store
        namespace: my-namespace
      key: good
---
apiVersion: v1
kind: ExternalSecret
metadata:
  name: bad
  namespace: my-different-namespace
spec:
  dataFrom:
    - secretStoreRef:
        name: secrets-store
        namespace: my-namespace
      key: bad
